# spielda

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
assets/: dungeon.json
assets/definitions/levels/: dungeon.json
assets/levels/: dungeon.json
assets/maps/: dungeon.tmj  dungeon.tmx
dependencies/: CMakeLists.txt
include/game/: CoreConfig.hpp  Game.hpp  MapLoader.hpp  Typedefs.hpp  Utils.hpp
include/game/asset/: FontAsset.hpp  TextureAsset.hpp
include/game/components/: AI.hpp  BoxCollider.hpp  GuiElement.hpp  Health.hpp  Sprite.hpp  Transform.hpp  Weapon.hpp
include/game/components/tags/: Friend.hpp
include/game/events/: Attack.hpp  DebugSwitch.hpp  Mouse.hpp
include/game/log/formatters/: entity.hpp
include/game/scenes/: GameScene.hpp  MenuScene.hpp
include/game/systems/: Collision.hpp  CollisionRender.hpp  Damage.hpp  DebugRender.hpp  Gui.hpp  GuiRender.hpp  Keyboard.hpp  MeleeCombat.hpp  Mouse.hpp  Movement.hpp  Render.hpp  SpriteDirection.hpp  TextRender.hpp  WallBoundaries.hpp  WeaponFollow.hpp
include/roen/: Utils.hpp
include/roen/container/: SystemsContainer.hpp
include/roen/interfaces/: IAsset.hpp  IGame.hpp  IScene.hpp  ISystem.hpp
include/roen/loader/: BaseMapLoader.hpp
include/roen/log/: Logger.hpp
include/roen/manager/: AssetManager.hpp  GameSceneManager.hpp
modules/: CMakeLists.txt
modules/game/include/: Game.hpp  MapLoader.hpp  SpatialGrid.hpp  Typedefs.hpp  Utilities.hpp  Utils.hpp
modules/game/include/asset/: FontAsset.hpp  TextureAsset.hpp
modules/game/include/components/: AI.hpp  Animation.hpp  AttachedEntities.hpp  BoxCollider.hpp  CharacterSheet.hpp  CircleCollider.hpp  Collider.hpp  Dirty.hpp  GuiElement.hpp  MapTile.hpp  Player.hpp  Projectile.hpp  RigidBody.hpp  Spell.hpp  Text.hpp  Transform.hpp  Weapon.hpp  WieldedWeapon.hpp
modules/game/include/components/tags/: Attachment.hpp  CollisionMask.hpp  Enemy.hpp
modules/game/include/events/: AIDetectedEnemy.hpp  Collision.hpp  DebugSwitch.hpp
modules/game/include/scenes/: GameScene.hpp  MenuScene.hpp
modules/game/include/systems/: AIDetect.hpp  AIDetectRadiusRender.hpp  AIMove.hpp  Animation.hpp  Collision.hpp  CollisionPartitioned.hpp  CollisionRender.hpp  Damage.hpp  DebugRender.hpp  GraphRender.hpp  Gui.hpp  GuiRender.hpp  IRenderSystem.hpp  Keyboard.hpp  MeleeCombat.hpp  Mouse.hpp  Movement.hpp  ProjectileSpawner.hpp  RangedCombat.hpp  Render.hpp  SpriteDirection.hpp  TextRender.hpp  WallBoundaries.hpp  WeaponFollow.hpp
modules/game/src/: CMakeLists.txt  Game.cpp  MapLoader.cpp  SpatialGrid.cpp
modules/game/src/asset/: CMakeLists.txt  FontAsset.cpp  TextureAsset.cpp
modules/game/src/scenes/: CMakeLists.txt  GameScene.cpp  MenuScene.cpp
modules/game/src/systems/: AIDetect.cpp  AIDetectRadiusRender.cpp  AIMove.cpp  Animation.cpp  CMakeLists.txt  Collision.cpp  CollisionPartitioned.cpp  CollisionRender.cpp  Damage.cpp  DebugRender.cpp  GraphRender.cpp  Gui.cpp  GuiRender.cpp  Keyboard.cpp  MeleeCombat.cpp  Mouse.cpp  Movement.cpp  ProjectileSpawner.cpp  RangedCombat.cpp  Render.cpp  SpriteDirection.cpp  TextRender.cpp  WallBoundaries.cpp  WeaponFollow.cpp
modules/roen/: CMakeLists.txt
modules/roen/include/: Utils.hpp
modules/roen/include/algorithms/search/: Pathfinding.hpp
modules/roen/include/container/: SystemsContainer.hpp
modules/roen/include/data_structure/: Graph.hpp  INode.hpp  MapNode.hpp  PriorityQueue.hpp  SystemsContainer.hpp  Vector2.hpp
modules/roen/include/interfaces/: IAsset.hpp  IScene.hpp
modules/roen/include/loader/: BaseMapLoader.hpp
modules/roen/include/log/formatters/: entity.hpp
modules/roen/include/manager/: AssetManager.hpp  GameSceneManager.hpp
modules/roen/src/: CMakeLists.txt
modules/roen/src/algorithms/: CMakeLists.txt
modules/roen/src/algorithms/search/: Pathfinding.cpp
modules/roen/src/container/: CMakeLists.txt  SystemsContainer.cpp
modules/roen/src/data_structure/: CMakeLists.txt  Graph.cpp  MapNode.cpp  SystemsContainer.cpp
modules/roen/src/loader/: BaseMapLoader.cpp  CMakeLists.txt
modules/roen/src/log/: CMakeLists.txt  Logger.cpp
modules/roen/src/manager/: CMakeLists.txt  GameSceneManager.cpp
modules/roen/tests/: CMakeLists.txt  main.cpp
modules/roen/tests/ut/: CMakeLists.txt
modules/roen/tests/ut/algorithms/: CMakeLists.txt  PathfindingTests.cpp
modules/roen/tests/ut/container/: CMakeLists.txt  SystemsContainerTests.cpp
modules/roen/tests/ut/data_structure/: CMakeLists.txt  GraphTests.cpp  MapNodeTests.cpp  PriorityQueueTests.cpp  SystemsContainerTests.cpp  Vector2Tests.cpp
modules/roen/tests/ut/manager/: AssetManagerTests.cpp  CMakeLists.txt  GameSceneManagerTests.cpp
modules/roen/tests/ut/utils/: CMakeLists.txt
src/game/: CMakeLists.txt  Game.cpp  MapLoader.cpp
src/game/asset/: CMakeLists.txt  FontAsset.cpp  TextureAsset.cpp
src/game/scenes/: CMakeLists.txt  GameScene.cpp  MenuScene.cpp
src/game/systems/: CMakeLists.txt  Collision.cpp  CollisionRender.cpp  Damage.cpp  DebugRender.cpp  Gui.cpp  GuiRender.cpp  Keyboard.cpp  MeleeCombat.cpp  Mouse.cpp  Movement.cpp  Render.cpp  SpriteDirection.cpp  TextRender.cpp  WallBoundaries.cpp  WeaponFollow.cpp
src/roen/: CMakeLists.txt
src/roen/container/: CMakeLists.txt  SystemsContainer.cpp
src/roen/loader/: BaseMapLoader.cpp  CMakeLists.txt
src/roen/log/: CMakeLists.txt  Logger.cpp
src/roen/manager/: CMakeLists.txt  GameSceneManager.cpp
tests/: CMakeLists.txt  main.cpp
tests/ut/: CMakeLists.txt
tests/ut/container/: CMakeLists.txt  SystemsContainerTests.cpp
tests/ut/manager/: AssetManagerTests.cpp  CMakeLists.txt  GameSceneManagerTests.cpp
tests/ut/utils/: CMakeLists.txt  UtilsTests.cpp
