target_sources(${PROJECT_NAME}
    PUBLIC
    ${INCLUDE_DIR}/game/Game.hpp
    ${INCLUDE_DIR}/game/MapLoader.hpp
    ${INCLUDE_DIR}/game/components/AI.hpp
    ${INCLUDE_DIR}/game/components/Dirty.hpp
    ${INCLUDE_DIR}/game/components/GuiElement.hpp
    ${INCLUDE_DIR}/game/components/Player.hpp
    ${INCLUDE_DIR}/game/components/RigidBody.hpp
    ${INCLUDE_DIR}/game/components/Sprite.hpp
    ${INCLUDE_DIR}/game/components/Text.hpp
    ${INCLUDE_DIR}/game/components/Transform.hpp
    ${INCLUDE_DIR}/game/components/tags/CollisionMask.hpp
    ${INCLUDE_DIR}/game/components/tags/Enemy.hpp
    ${INCLUDE_DIR}/game/components/tags/Friend.hpp
    ${INCLUDE_DIR}/game/events/Attack.hpp
    ${INCLUDE_DIR}/game/events/Collision.hpp
    ${INCLUDE_DIR}/game/events/DebugSwitch.hpp
    ${INCLUDE_DIR}/game/events/Mouse.hpp
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/MapLoader.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Game.cpp
)

add_subdirectory(asset)
add_subdirectory(scenes)
add_subdirectory(systems)